added linux File System Essential

--- a/Linux Adminstrtion/2. Linux File System Essential.md
+++ b/Linux Adminstrtion/2. Linux File System Essential.md
@@ -84,7 +84,7 @@ At a technical level, the inode is represented by a C structure (`struct inode`)
 - `i_blocks`: The number of disk blocks allocated to the file.
     
 
-```
+```c
 struct inode {
     umode_t			i_mode;         /* File mode (permissions) */
     unsigned short		i_opflags;      /* Internal flags */
@@ -261,7 +261,7 @@ This command is used to get the block size of a specific block device in bytes. 
 
 **Example:**
 
-```
+```bash
 sudo blockdev --getbsz /dev/sda
 ```
 
