--- a/Linux Adminstrtion/2. Linux File System Essential.md
+++ b/Linux Adminstrtion/2. Linux File System Essential.md
@@ -2,6 +2,7 @@
 
 In this file, we will explain the essentials of the Linux file system.
 
+---
 ## In Linux, everything is a file.
 
 ### What is a file system?
@@ -24,6 +25,7 @@ A file system is:
 - **CD ROM:** Laser Engravings
     
 
+---
 ## Internal vs. External Fragmentation
 
 ### External Fragmentation
@@ -48,6 +50,7 @@ Internal fragmentation occurs when storage space is wasted _inside_ an allocated
 
 For example, if the block size is 4KB and you save a 1KB file, that file will be allocated a full 4KB block. The remaining 3KB is wasted space. This wasted space is called internal fragmentation because it is internal to an allocated region.
 
+---
 ## What is an Inode?
 
 An **inode** (index node) is a data structure on the file system that stores all the metadata about a file or directory, except for its name and its actual content. When a file is created, it is assigned both a name and an inode number.
@@ -86,38 +89,40 @@ At a technical level, the inode is represented by a C structure (`struct inode`)
 
 ```c
 struct inode {
-    umode_t			    i_mode;         /* File mode (permissions) */
+    umode_t			i_mode;         /* File mode (permissions) */
     unsigned short		i_opflags;      /* Internal flags */
-    kuid_t			    i_uid;          /* Owner's user ID */
-    kgid_t			    i_gid;          /* Owner's group ID */
+    kuid_t			i_uid;          /* Owner's user ID */
+    kgid_t			i_gid;          /* Owner's group ID */
     unsigned int		i_flags;        /* File flags */
     struct timespec64	i_atime;        /* Last access time */
     struct timespec64	i_mtime;        /* Last modification time */
     struct timespec64	i_ctime;        /* Last status change time */
-    blkcnt_t		    i_blocks;       /* Number of 512B blocks allocated */
-    loff_t			    i_size;         /* File size in bytes */
+    blkcnt_t		i_blocks;       /* Number of 512B blocks allocated */
+    loff_t			i_size;         /* File size in bytes */
     struct hlist_node	i_hash;         /* Hash list node */
     struct list_head	i_io_list;      /* IO list */
     struct list_head	i_wb_list;      /* Write-back list */
-    struct address_space	*i_mapping;      /* Page cache mapping */
-    struct address_space	 i_data;         /* Private data mapping */
-    struct inode_operations	*i_op;           /* Inode operations */
-    struct super_block	    *i_sb;           /* Associated superblock */
-    struct file_operations	*i_fop;          /* File operations */
-    struct lockref		     i_lockref;      /* Reference count with spinlock */
-    atomic_t		         i_count;        /* Reference counter */
-    unsigned int	         i_state;        /* State flags */
-    dirmtime_t		         dirtied_when;   /* Time when dirtied */
-    unsigned long		     i_version;      /* Version number */
-    u32			             i_generation;   /* Generation number */
-    struct xattr		    *i_xattrs;       /* Extended attributes */
+    struct address_space	*i_mapping;     /* Page cache mapping */
+    struct address_space	i_data;         /* Private data mapping */
+    struct inode_operations	*i_op;          /* Inode operations */
+    struct super_block	*i_sb;          /* Associated superblock */
+    struct file_operations	*i_fop;         /* File operations */
+    struct lockref		i_lockref;      /* Reference count with spinlock */
+    atomic_t		i_count;        /* Reference counter */
+    unsigned int		i_state;        /* State flags */
+    dirmtime_t		dirtied_when;   /* Time when dirtied */
+    unsigned long		i_version;      /* Version number */
+    u32			i_generation;   /* Generation number */
+    struct xattr		*i_xattrs;      /* Extended attributes */
 };
 ```
 
+---
 ## What is Metadata?
 
 Metadata is simply "data about data." In the context of a file system, the actual content of a file (the text in a document, the pixels in an image) is the **data**. The **metadata** is all the other information that describes that file. Essentially, all the information stored in an inode is the file's metadata.
 
+---
 ## How Filenames and Inodes are Connected: The Dentry
 
 While the inode stores _what_ the file is, it doesn't store the file's human-readable name. This is handled by directories.
@@ -160,6 +165,7 @@ Here is an example of a dentry for the file `/etc/passwd`:
 |Child Dentries|None (since it is a file)|
 |Reference Count|`3`|
 
+----
 ## Understanding the Superblock
 
 ### What is a Superblock?
@@ -195,6 +201,7 @@ The superblock typically includes the following fields:
 |Volume Name|Human-readable name for the filesystem|`MyData`|
 |Journal UUID|UUID of the journal (if journaling is enabled)|`abcdef01-2345-6789-abcd-ef0123456789`|
 
+----
 ## The Virtual File System (VFS)
 
 The **Virtual File System** (also known as the Virtual Filesystem Switch or VFS) is a crucial abstraction layer inside the Linux kernel. Its primary purpose is to allow user applications to interact with different types of filesystems in a uniform way.
@@ -236,6 +243,7 @@ graph TD
     F --> G([Hardware]);
 ```
 
+----
 ## Block Size Trade-offs: Small vs. Large
 
 The choice of block size for a filesystem involves a trade-off between space efficiency and I/O performance.
@@ -266,3 +274,106 @@ sudo blockdev --getbsz /dev/sda
 ```
 
 This command will return the block size (e.g., `4096`) for the device `/dev/sda`.
+
+---
+## Standard File Descriptors
+
+Every process in Linux starts with three standard file descriptors automatically opened by the kernel:
+
+- **0 (stdin):** Standard input, typically connected to the keyboard or terminal for reading input.
+    
+- **1 (stdout):** Standard output, typically connected to the display or terminal for normal program output.
+    
+- **2 (stderr):** Standard error, typically connected to the display or terminal for error messages and diagnostic output.
+    
+
+---
+## Common File Operations
+
+The behavior of common file operations depends heavily on the underlying filesystem structures like inodes and dentries.
+
+### Copying a File
+
+When you copy a file, the system always creates a brand new, independent file at the destination. This process is the same whether you are copying to the same filesystem or a different one.
+
+- **A new inode is created** on the destination filesystem.
+    
+- **New data blocks are allocated**, and the original data is read and written to these new blocks.
+    
+- **A new dentry is created** in the destination directory to link the new filename to the new inode.
+    
+- Metadata like permissions may be preserved, but the creation timestamp and inode number will be new.
+    
+
+### Moving a File
+
+The `mv` command is more complex, as its behavior changes based on the source and destination.
+
+#### Within the Same Filesystem
+
+This is a very fast, efficient operation because no actual file data is moved. It is purely a metadata operation.
+
+- **Changes:** A new **dentry** is created in the destination directory and the old one is removed from the source. Both dentries point to the _exact same inode_.
+    
+- **Constant:** The **inode number**, the **data blocks**, and all metadata (like permissions and timestamps) remain unchanged. You are simply changing where the filename points.
+    
+
+#### To a Different Filesystem
+
+When you move a file to a different partition or drive (a different filesystem), the operation is fundamentally a **copy-then-delete**. An inode from one filesystem cannot exist on another.
+
+- **Changes:** The system first performs a full **copy** operation to the new filesystem, creating a new inode, new data blocks, and a new dentry.
+    
+- Once the copy is successfully verified, the original dentry, inode, and data blocks on the source filesystem are **deleted**. This is a much slower process because all the file's data must be read from the source and written to the destination.
+    
+
+### Renaming a File
+
+Renaming a file is identical to moving a file **within the same filesystem**. It is a very fast metadata-only operation.
+
+- **Changes:** The text of the **dentry** (the filename) is changed.
+    
+- **Constant:** The **inode number** and the **data blocks** are completely untouched. The file itself hasn't changed, only the name used to find it.
+    
+
+### Deleting a File
+
+When you delete a file (using `rm`), you are not immediately erasing the data from the disk.
+
+- **The dentry is removed** from the directory file. This unlinks the filename from its inode.
+    
+- The system checks the **link count** on the inode. If this was the only link (the link count is now zero), the inode and its associated data blocks are marked as free in the filesystem's bitmaps.
+    
+- The data is not wiped. It remains on the disk until the system reallocates those data blocks for a new file and overwrites them. This is why deleted files can sometimes be recovered with special tools.
+    
+
+---
+## Advanced Filesystem Commands
+
+Here are some more advanced commands for inspecting filesystem details.
+
+### View a file's inode number
+
+Use the `-i` flag with `ls` to display the inode number as the first column in the output.
+
+```bash
+ls -i file.txt
+```
+
+### View inode usage for filesystems
+
+Use `df -ih` to see how many inodes are used and how many are free on each mounted filesystem. This is useful for diagnosing "no space left on device" errors that can occur even when disk space is available, if all inodes have been used.
+
+```bash
+df -ih
+```
+
+### View detailed filesystem metadata
+
+The `dumpe2fs` command prints the super block and blocks group information for filesystems of the ext2, ext3, or ext4 type. It provides a huge amount of detailed information. It's often piped to `grep` to find specific fields.
+
+**Note:** This command requires `sudo` and the correct path to your partition, which may be different from the example.
+
+```bash
+sudo dumpe2fs /dev/nvme1n1p5 | grep "Filesystem created:"
+```
