added some edit

--- a/Linux Adminstrtion/03. Process Managment.md
+++ b/Linux Adminstrtion/03. Process Managment.md
@@ -17,7 +17,7 @@ Key characteristics of a process:
 
 A process moves through different states during its life cycle. The operating system's scheduler manages these transitions.
 
-```
+```mermaid
 graph TD
     Dormant(Dormant / Created) --> Ready;
     Ready <--> Running;
@@ -45,7 +45,7 @@ Beyond the basic lifecycle, several key concepts define how processes interact:
 
 **1. Snapshot Behavior (fork())** When the `fork()` system call is made, a new child process is created. This child process receives a _snapshot_ of the parent's memory, file descriptors, and execution state at that exact moment. From that point on, both the parent and child processes continue to execute independently.
 
-```
+```c
 // Demo: fork() Snapshot Behavior
 // Demonstrates that parent and child are separate processes
 // with their own copies of variables after the fork.
@@ -83,7 +83,7 @@ int main() {
 
 **3. Zombie Process** A **zombie process** occurs when a child process has terminated, but the parent process has not yet called `wait()` to read its exit status. Zombies occupy an entry in the process table until the parent acknowledges their termination.
 
-```
+```c
 // Demo: Handling Zombie Processes
 // This demo shows how zombie processes are created when the parent process
 // does not call wait() to clean up terminated child processes.
@@ -114,7 +114,7 @@ int main() {
 
 **4. Orphan Process** An **orphan process** is a child process whose parent has terminated before it. Orphan processes are adopted by the `init` process (PID 1), which ensures they are properly cleaned up when they eventually terminate (by calling `wait()` on them).
 
-```
+```c
 // Demo: Orphan Process
 // Demonstrates an orphan process being adopted by 'init' (or equivalent).
 #include <stdio.h>
@@ -175,7 +175,7 @@ int main() {
 
 You can list all available signals on your system by using the `kill -l` command:
 
-```
+```bash
 kill -l
 ```
 
@@ -240,13 +240,13 @@ Despite its name, the `kill` command is used to send signals to processes, not j
 
 **Syntax:**
 
-```
+```bash
 kill -SIGNAL PID
 ```
 
 **Examples:**
 
-```
+```bash
 # Gracefully terminate a process:
 kill -SIGTERM 1234
 
@@ -263,13 +263,13 @@ The `killall` command sends signals to all processes running a specified command
 
 **Syntax:**
 
-```
+```bash
 killall -SIGNAL process_name
 ```
 
 **Examples:**
 
-```
+```bash
 # Gracefully terminate all instances of firefox:
 killall -SIGTERM firefox
 
@@ -283,13 +283,13 @@ The `pkill` command sends signals to processes based on various criteria such as
 
 **Syntax:**
 
-```
+```bash
 pkill -SIGNAL pattern
 ```
 
 **Examples:**
 
-```
+```bash
 # Terminate all processes matching the pattern vim:
 pkill -SIGTERM vim
 
@@ -309,7 +309,7 @@ In a command-line shell (like `bash`), you can control whether a process runs in
 
 Here are the common commands to manage this:
 
-```
+```bash
 # Run a process in the background
 # The '&' symbol tells the shell to run this process in the background.
 sleep 50 &
@@ -348,14 +348,14 @@ The **nice value** (`NI`) is a user-adjustable setting that influences the prior
 
 You can launch a process with a specific nice value:
 
-```
+```bash
 # Runs 'sleep 123456' with a nice value of 10 (lower priority)
 nice -n 10 sleep 123456
 ```
 
 To see the priority and nice values of processes:
 
-```
+```bash
 # ps -elf shows all processes with full details
 # The 'PRI' column is the priority
 # The 'NI' column is the nice value
