added session Session 12: Network Layer Data Plane in 04. Intro to Networking

--- a/Linux Adminstrtion/04. Intro to Networking.md
+++ b/Linux Adminstrtion/04. Intro to Networking.md
@@ -780,3 +780,360 @@ Alice also needs to decide which peers to _upload_ (send) chunks to. This is bas
         
 ---
 # Session 12: Network Layer Data Plane
+
+# The Network Layer
+
+The primary goal of the network layer is to understand the principles behind its services. It has two key functions, or "planes":
+
+- **Data Plane:** This is the **local, per-router function**. It determines how a datagram arriving on a router's input port is forwarded to the correct output port. It makes this decision based on values in the arriving packet's header.
+    
+- **Control Plane:** This is the **network-wide logic**. It determines how a datagram is routed among all the routers along the end-to-end path from the source host to the destination host.
+    
+
+This document focuses on the principles of the **data plane**.
+
+## Core Function: Host-to-Host Transport
+
+The fundamental service of the network layer is to transport a **segment** (from the transport layer) from a sending host to a receiving host. This process involves:
+
+- **Sender:** Encapsulates segments into **datagrams** (packets) by adding a network-layer header (like an IP header). It then passes the datagram down to the link layer.
+    
+- **Receiver:** Receives a datagram from its link layer, strips the header, and delivers the original **segment** up to the transport layer protocol (e..g., TCP or UDP).
+    
+
+This network layer protocol runs in _every_ internet device, including both end **hosts** (laptops, phones) and **routers**.
+
+## Network Layer Service Models
+
+This defines the services and guarantees the network layer provides to the transport layer (e..g., TCP, UDP) for the "channel" transporting datagrams.
+
+This is **not** a single model. A network _could_ offer various services, either for **individual datagrams** or for a **flow of datagrams**.
+
+- **Example Services for Individual Datagrams:**
+    
+    - **Guaranteed Delivery:** A promise that the packet will arrive.
+        
+    - **Guaranteed Delivery with Delay:** A promise the packet will arrive within a specific time (e.g., less than 40 msec).
+        
+- **Example Services for a Flow of Datagrams:**
+    
+    - **In-order Datagram Delivery:** Guarantees that packets in a stream arrive in the same order they were sent.
+        
+    - **Guaranteed Minimum Bandwidth:** Pledges a minimum data rate (e.g., 1 Mbps) for the flow.
+        
+    - **Restrictions on Inter-packet Spacing:** Controls the jitter, or timing, between packets in a flow.
+        
+
+### Internet's "Best-Effort" Service Model
+
+The Internet's network architecture (using the IP protocol) provides a **"best-effort" service**.
+
+As the table from the slide shows, this model provides **no Quality of Service (QoS) guarantees**.
+
+- **Bandwidth:** none
+    
+- **Loss:** no
+    
+- **Order:** no
+    
+- **Timing:** no
+    
+
+Specifically, there are **no guarantees** on:
+
+1. Successful datagram delivery to the destination.
+    
+2. The timing or order of delivery.
+    
+3. The bandwidth available to an end-to-end flow.
+    
+
+Higher-level protocols (like TCP) must be used to add reliability if it's needed.
+
+#### Reflections on the Success of Best-Effort Service
+
+Despite having no guarantees, the best-effort model has been incredibly successful. This is because:
+
+- **Simplicity:** The simple mechanism allowed the Internet to be widely deployed and adopted quickly.
+    
+- **Over-Provisioning:** Sufficient provisioning of bandwidth by ISPs allows real-time applications (like interactive voice and video) to have performance that is "good enough" for most of the time.
+    
+- **Application-Layer Services:** Replicated, distributed services at the application layer (like datacenters and Content Distribution Networks or CDNs) connect close to clients' networks. This allows services to be provided from multiple locations, improving performance and reliability.
+    
+- **Congestion Control:** "Elastic" services (like file transfers or email) use congestion control (at the transport layer, e.g., TCP) to adapt to available bandwidth, which helps manage network load.
+    
+
+As the slide notes, it's hard to argue with the success of this model.
+
+### Other Service Models (Providing QoS)
+
+While "best-effort" is the standard for the public Internet, other network architectures and protocols _can_ provide Quality of Service (QoS) guarantees. As the comparative table shows:
+
+- **ATM (CBR - Constant Bit Rate):** This model, part of the ATM architecture, provides strong guarantees. It offers a **constant bandwidth rate**, and guarantees **loss** (yes, it guarantees no loss), **order**, and **timing**.
+    
+- **ATM (ABR - Available Bit Rate):** A different ATM service that guarantees a **minimum bandwidth** and **in-order delivery**, but makes no guarantees on loss or specific timing.
+    
+- **Internet (Intserv - Integrated Services, RFC 1633):** An enhanced service model for the Internet architecture that _can_ provide guarantees on **bandwidth**, **loss**, **order**, and **timing** for specific flows that request it.
+    
+- **Internet (Diffserv - Differentiated Services, RFC 2475):** A model for the Internet that provides relative guarantees. It makes it **possible** to guarantee bandwidth, minimize loss, and maintain order (e.g., for high-priority traffic), but provides no guarantees on timing.
+    
+
+## Forwarding (Data Plane) versus Routing (Control Plane)
+
+These are the two key functions of the network layer:
+
+- **Forwarding (Data Plane):** This is the _local_ action a router takes to **move a packet from a router's input link to the appropriate router output link**. It happens on the **data plane** and uses a _forwarding table_ to make split-second decisions.
+    
+    - **Analogy ("Taking a Trip"):** Forwarding is the process of getting through a single interchange or intersection.
+        
+- **Routing (Control Plane):** This is the _network-wide_ process to **determine the route or path taken by packets from source to destination**. This process is carried out by **routing algorithms** (which run on the control plane) to build the forwarding tables.
+    
+    - **Analogy ("Taking aTrip"):** Routing is the process of planning the entire trip from your source to your destination (e.g., using a map).
+        
+
+There are two main control-plane approaches:
+
+1. **Traditional Routing Algorithms (Per-Router Control Plane):** The logic is implemented _in the routers themselves_. As the slide illustrates, individual routing algorithm components _in each and every router interact with each other_ in the control plane (e.g., by exchanging messages). Based on this interaction, each router independently computes and builds its own local forwarding table. The data plane then uses this local table to forward packets.
+    
+2. **Software-Defined Networking (SDN):** The logic is implemented in _remote servers (controllers)_. A central controller computes the paths and installs the forwarding rules in the routers.
+    
+
+In short: **Routing plans the overall path; forwarding executes the plan at each individual router.**
+
+## How a Router Works
+
+A router is a specialized computer designed for forwarding packets at high speed. As the architectural overview slide shows, a router is composed of two main planes:
+
+- **Forwarding Data Plane:** These are the **hardware** components that handle the actual packet forwarding. This plane operates in the **nanosecond timeframe**.
+    
+- **Routing/Management Control Plane:** This is the **software** component that manages the router and computes the forwarding table. This plane operates in the **millisecond timeframe**.
+    
+
+Unlike end hosts (which run the full application-to-physical stack), a router's primary function is forwarding, so it operates at the bottom three layers of the network stack:
+
+1. **Network Layer** (Layer 3)
+    
+2. **Link Layer** (Layer 2)
+    
+3. **Physical Layer** (Layer 1)
+    
+
+It uses these layers to make its forwarding decisions. Its main components are:
+
+1. **Input Ports (Data Plane):** This is where the packet processing begins. The functions are layered:
+    
+    - **Physical Layer (Line Termination):** Performs the bit-level reception from the physical wire.
+        
+    - **Link Layer (Protocol Receive):** Receives the full link-layer frame (e.g., an Ethernet frame).
+        
+    - **Network Layer (Lookup, Forwarding, Queueing):** This is the core "decentralized switching" function.
+        
+        - Using the header field values from the datagram, it **looks up** the destination output port using the **forwarding table** stored in the input port's memory. This is a "match plus action" operation.
+            
+        - The goal is to complete this entire input port processing at **"line speed"**—fast enough to keep up with the rate of incoming bits.
+            
+        - **Input Port Queueing:** If datagrams arrive faster than they can be forwarded into the switch fabric, they are placed in a queue at the input port.
+            
+    
+    #### Destination-Based Forwarding & Longest Prefix Match
+    
+    It's not feasible to have a forwarding table entry for every possible 32-bit IP address. Instead, the table stores address **prefixes**. This is the solution to the problem of ranges not dividing up "nicely."
+    
+    **Longest Prefix Match Rule:** When looking for a forwarding table entry for a given destination address, the router **must use the longest address prefix that matches the destination address.**
+    
+    Here is an example forwarding table using prefixes:
+    
+    |Destination Address Prefix|Link Interface|
+    |---|---|
+    |`11001000 00010111 00010*** *********`|0|
+    |`11001000 00010111 00011000 *********`|1|
+    |`11001000 00010111 00011*** *********`|2|
+    |`otherwise`|3|
+    
+    Now, let's see how this rule works with two example destination addresses:
+    
+    1. **Destination Address:** `11001000 00010111 00010110 10100001`
+        
+        - This address **matches** the first entry (`...00010***...`).
+            
+        - It does **not** match the second or third entries.
+            
+        - It **also matches** `otherwise`.
+            
+        - The _longest_ prefix it matches is `...00010...` (21 bits).
+            
+        - **Result:** The packet is forwarded to **Link Interface 0**.
+            
+    2. **Destination Address:** `11001000 00010111 00011000 10101010`
+        
+        - This address **matches** the second entry (`...00011000...`).
+            
+        - It **also matches** the third entry (`...00011***...`).
+            
+        - It **also matches** `otherwise`.
+            
+        - The _longest_ prefix it matches is `...00011000...` (24 bits), which is longer than the `...00011...` (20 bits) prefix.
+            
+        - **Result:** The packet is forwarded to **Link Interface 1**. (As shown by the "match!" arrow in the slide).
+            
+    
+    ##### Hardware Implementation: TCAMs
+    
+    To achieve the "line speed" goal, this longest prefix match lookup cannot be done in software. It is often performed in hardware using **Ternary Content Addressable Memories (TCAMs)**.
+    
+    - **Content Addressable:** This is a special type of memory. Instead of giving it a memory address to get data, you present the _data_ (the packet's destination IP address) to the TCAM.
+        
+    - **One Clock Cycle:** The TCAM then searches its _entire_ table and retrieves the matching link interface (the result of the longest prefix match) in a **single clock cycle**, regardless of the table size.
+        
+    - **Scale:** This is what allows high-performance routers (e.g., Cisco Catalyst) to handle millions of routing table entries at extremely high speeds.
+        
+2. **High-Speed Switching Fabric (Data Plane):** This is the "backbone" of the router that connects the input ports to the output ports, also implemented in hardware. Its job is to **transfer a packet from an input link to the appropriate output link.**
+    
+    - **Switching Rate:** This is the rate at which packets can be transferred from inputs to outputs.
+        
+    - This rate is often measured as a multiple of the input/output line rate. For a router with `N` inputs, a switching rate of `N` times the line rate is desirable to prevent the fabric itself from being a bottleneck.
+        
+    
+    There are **three major types** of switching fabrics:
+    
+    - **Switching via Memory:** The simplest form, where an input port writes the packet to system memory, and the output port reads it back. This is limited by the memory bandwidth.
+        
+    - **Switching via a Bus:** A shared bus connects all input ports to all output ports. Only one packet can cross the bus at a time, limiting throughput.
+        
+    - **Switching via an Interconnection Network:** A more sophisticated and scalable network (like a crossbar switch) that allows multiple packets to be forwarded in parallel.
+        
+3. **Output Ports (Data Plane):** Queue packets (if the link is busy) and transmit them onto the outgoing link. This is also a hardware function.
+    
+    - **Buffer Management:** Deciding which packets to store or drop if the queue (buffer) is full.
+        
+    - **Scheduling:** Deciding which queued packet to send next (e.g., first-in-first-out, or prioritizing certain traffic).
+        
+4. **Routing Processor (Control Plane):** The "brain" (software) that runs the control plane (routing protocols/algorithms) to create and update the forwarding table. This processor operates in milliseconds and is not directly involved in forwarding every single packet. In an SDN approach, this processor would instead communicate with the central controller.
+    
+
+## Internet Network Layer: IP, ICMP, and Routing
+
+As the slide diagram illustrates, the Internet's network layer (which sits between the Transport and Link layers) has several key functions and protocols:
+
+- **Path-Selection Algorithms (Control Plane):** These are the routing algorithms that determine the paths packets take.
+    
+    - They are implemented in traditional **routing protocols** (like **OSPF** and **BGP**) that run on routers, or in a centralized **SDN controller**.
+        
+    - Their primary output is the **forwarding table**, which is then used by the data plane.
+        
+- **IP Protocol (Data Plane):** This is the core protocol of the Internet's network layer. It defines:
+    
+    - **Datagram Format:** The layout of the 32-bit wide IP packet header. Key fields are broken down in the table below:
+        
+        |Field|Description|
+        |---|---|
+        |`ver` (Version)|IP protocol version number (e.g., 4 for IPv4).|
+        |`head len` (Header Length)|Length of the IP header in 32-bit words (e.g., a value of 5 means a 5 * 4 = 20-byte header).|
+        |`type of service`|Specifies how the datagram should be handled, used for Quality of Service (e.g., `diffserv`, `ECN`).|
+        |`length` (Total Datagram Length)|Total length of the _entire_ datagram (header + payload) in bytes.|
+        |`16-bit identifier`, `flgs`, `fragment offset`|Used for **fragmentation and reassembly** of large datagrams.|
+        |`time to live (TTL)`|Remaining "hops" (routers) the packet can visit. **Decremented by one at each router** to prevent loops.|
+        |`upper layer` (Protocol)|Specifies the transport layer protocol for the payload (e.g., TCP (6) or UDP (17)).|
+        |`header checksum`|A value calculated from the header to detect bit errors. Recomputed at each router.|
+        |`source IP address`|The 32-bit IP address of the original sender.|
+        |`destination IP address`|The 32-bit IP address of the final destination.|
+        |`options (if any)`|Optional fields (e.g., record route). Not commonly used.|
+        |`payload data`|The actual data (typically a TCP or UDP segment). Variable length.|
+        
+    - **Overhead:** As the slide notes, there is overhead associated with this encapsulation. A typical TCP segment has a **20-byte TCP header**, and the IP datagram adds a **20-byte IP header**. This means there are **40 bytes + application layer overhead** for every segment of data sent.
+        
+    - **Addressing:** The 32-bit IPv4 (or 128-bit IPv6) addressing scheme that gives every host a unique identifier. (We will see _why_ longest prefix matching is used when we study addressing in more detail).
+        
+    - **Packet Handling Conventions:** Rules for how to process and forward packets (e.g., decrementing TTL).
+        
+    - The IP protocol consults the **forwarding table** (created by the path-selection algorithms) to determine where to send an incoming packet.
+        
+- **ICMP Protocol:** The Internet Control Message Protocol. This is a support protocol used by hosts and routers to communicate network-layer information.
+    
+    - **Error Reporting:** Used to report errors, such as "destination network unreachable."
+        
+    - **Router "Signaling":** Used for diagnostic purposes (e.g., the `ping` command uses ICMP).
+        
+- **DHCP: Dynamic Host Configuration Protocol:** The Dynamic Host Configuration Protocol (DHCP) is a protocol used to automate the process of configuring devices on a network.
+    
+    - **Goal:** To allow a host to **dynamically obtain an IP address** from a network server when it "joins" a network, rather than requiring a static, manual configuration.
+        
+    - **Key Features:**
+        
+        - **Lease Renewal:** Allows a host to renew its "lease" on an IP address it is using.
+            
+        - **Address Reuse:** Enables the reuse of addresses. A device only holds an address while it is connected/on.
+            
+        - **Mobile Support:** Provides critical support for mobile users who frequently join and leave different networks.
+            
+    - **DHCP Overview (4-Step Process):**
+        
+        1. **DHCP Discover:** The host broadcasts a `DHCP discover` message to find any available DHCP servers (this step is optional).
+            
+        2. **DHCP Offer:** A DHCP server responds with a `DHCP offer` message, offering a potential IP address (also optional).
+            
+        3. **DHCP Request:** The host requests one of the offered IP addresses by sending a `DHCP request` message.
+            
+        4. **DHCP Ack:** The server sends a `DHCP ack` (acknowledgment) message, confirming the lease and providing the IP address and other configuration details (like the subnet mask and default gateway).
+            
+- **Network Address Translation (NAT):** NAT is a technique where all devices in a local network (e.g., a home network with private addresses like `10.0.0.0/24`) **share just one single IPv4 address** (e.g., `138.76.29.7`) as far as the outside world is concerned.
+    
+    - **How it works (Outgoing):**
+        
+        1. A device on the local network (e.g., `10.0.0.1`) sends a datagram to the Internet.
+            
+        2. When the datagram reaches the NAT-enabled router, the router **replaces** the private source IP (`10.0.0.1`) with its single public IP (`138.76.29.7`).
+            
+        3. Crucially, it also **replaces** the source port number (e.g., `3345`) with a new, unique port number (e.g., `5001`).
+            
+        4. The router stores this mapping (`10.0.0.1:3345` ↔ `138.76.29.7:5001`) in a **NAT translation table**.
+            
+        5. The modified datagram (now with a public source IP and new port) is sent to the Internet.
+            
+    - **How it works (Incoming):**
+        
+        1. The destination (e.g., a web server) sends a reply back to `138.76.29.7` at port `5001`.
+            
+        2. The NAT router receives this datagram. It looks up port `5001` in its translation table.
+            
+        3. It finds the mapping and **rewrites** the destination IP back to the private IP (`10.0.0.1`) and the destination port back to the original port (`3345`).
+            
+        4. The datagram is then forwarded to the correct device on the local network.
+            
+    - This allows many devices to share one IP, but it also uses **different source port numbers** to distinguish between the different internal devices' conversations.
+        
+- **IPv6:** A newer, 128-bit address format designed to solve the shortage of IPv4 addresses.
+    
+
+## Generalized Forwarding and SDN
+
+This is a more advanced concept that includes models beyond traditional IP forwarding. It is the key idea in **Software-Defined Networking (SDN)**.
+
+- **Match+Action:** This is the core principle. Packets are "matched" against a set of rules in a flow table. If a match is found, the router performs a corresponding "action" (e.g., forward to port 3, drop, modify the packet, or send to the controller).
+    
+- **OpenFlow:** This is a standard protocol that allows a central SDN controller (the "control plane") to directly program these "match+action" rules in the data plane (the forwarding hardware) of routers.
+    
+- **SDN:** As mentioned earlier, this is a control-plane approach where the routing logic is logically separated from the data plane (forwarding hardware). This allows a central "controller" to program the forwarding tables of all routers, making the network more flexible and manageable.
+    
+
+## Middleboxes
+
+Middleboxes are network devices that perform functions beyond standard IP routing. They operate "in the middle" of the network path to monitor, filter, or transform traffic. Common examples include:
+
+- **Firewalls:** Filter traffic based on security rules.
+    
+- **Load Balancers:** Distribute incoming traffic across multiple servers.
+    
+- **NAT gateways:** (As described above).
+    
+
+## Internet Architecture
+
+The Internet is not one single network; it is a "network of networks." It is a massive collection of interconnected **Autonomous Systems (ASs)**.
+
+- **Autonomous System (AS):** A network (like an ISP, a university, or a large tech company) that is managed by a single organization.
+    
+- **ISPs (Internet Service providers):** These are the ASs that provide Internet access to homes and businesses. They are often structured in tiers (Tier 1, 2, 3).
+    
+- **Peering:** Different ASs connect to each other (often at **Internet Exchange Points (IXPs)**) to exchange traffic, forming the global Internet.
+
